# root

./: .gitignore  .travis.yml  CMakeLists.txt  ROOTBuild.txt  build-pkg  root-pkg  tarball.py
.ci/: cmake_script.sh  copy_headers.sh
bindings/: CMakeLists.txt  ROOTBuild.txt
bindings/r/: ROOTBuild.txt
builtins/: ROOTBuild.txt
builtins/davix/: ROOTBuild.txt
builtins/lz4/: CMakeLists.txt  ROOTBuild.txt
builtins/pcre/: ROOTBuild.txt
builtins/snappy/: CMakeLists.txt
config/: RConfigure.in
core/: CMakeLists.txt  ROOTBuild.txt
core/zfp/: CMakeLists.txt
core/zfp/inc/: ZipZFP.h
core/zfp/src/: ZipZFP.cxx
documentation/: ROOTBuild.txt
geom/: CMakeLists.txt  ROOTBuild.txt
geom/gdml/: CMakeLists.txt  ROOTBuild.txt
geom/gdml/src/: TGDMLWrite.cxx
geom/geocad/: CMakeLists.txt
geom/geom/: CMakeLists.txt  ROOTBuild.txt
geom/geombuilder/: CMakeLists.txt  ROOTBuild.txt
geom/geompainter/: CMakeLists.txt  ROOTBuild.txt
geom/vecgeom/: ROOTBuild.txt
graf2d/: CMakeLists.txt  ROOTBuild.txt
graf3d/: CMakeLists.txt  ROOTBuild.txt
gui/: CMakeLists.txt  ROOTBuild.txt
gui/browserv7/: ROOTBuild.txt
gui/canvaspainter/: ROOTBuild.txt
gui/cefdisplay/: ROOTBuild.txt
gui/fitpanel/: CMakeLists.txt  ROOTBuild.txt
gui/fitpanelv7/: ROOTBuild.txt
gui/ged/: CMakeLists.txt  ROOTBuild.txt
gui/gui/: ROOTBuild.txt
gui/guibuilder/: CMakeLists.txt  ROOTBuild.txt
gui/guihtml/: CMakeLists.txt  ROOTBuild.txt
gui/qt5webdisplay/: ROOTBuild.txt
gui/recorder/: CMakeLists.txt  ROOTBuild.txt
gui/sessionviewer/: CMakeLists.txt  ROOTBuild.txt
gui/webdisplay/: ROOTBuild.txt
gui/webgui6/: ROOTBuild.txt
hist/: CMakeLists.txt  ROOTBuild.txt
hist/hbook/: ROOTBuild.txt
hist/hbook/inc/: THbookBranch.h
hist/hist/: ROOTBuild.txt
hist/hist/src/: TGraph.cxx  TGraphAsymmErrors.cxx  TGraphBentErrors.cxx  TGraphErrors.cxx  TKDE.cxx  TMultiGraph.cxx
hist/histdraw/: ROOTBuild.txt
hist/histpainter/: ROOTBuild.txt
hist/histpainter/src/: TGraphPainter.cxx  THistPainter.cxx
hist/spectrum/: ROOTBuild.txt
hist/spectrumpainter/: ROOTBuild.txt
hist/unfold/: ROOTBuild.txt
html/: CMakeLists.txt  ROOTBuild.txt
interpreter/: CMakeLists.txt  ROOTBuild.txt
io/: CMakeLists.txt  ROOTBuild.txt
io/castor/: CMakeLists.txt
io/castor/inc/: TCastorFile.h
io/dcache/: CMakeLists.txt  ROOTBuild.txt
io/dcache/inc/: TDCacheFile.h
io/gfal/: CMakeLists.txt  ROOTBuild.txt
io/gfal/inc/: TGFALFile.h
io/hdfs/: CMakeLists.txt
io/hdfs/inc/: THDFSFile.h
io/io/: CMakeLists.txt  ROOTBuild.txt
io/io/inc/: LinkDefIOLite.h  TDirectoryFile.h  TFile.h  TMemFile.h
io/io/inc/ROOT/: RRawFile.hxx  TBufferMerger.hxx
io/io/src/: RRawFile.cxx  RRawFileCreate.cxx  TFile.cxx  TFileCacheRead.cxx  TKey.cxx
io/io/test/: CMakeLists.txt  RRawFileMock.hxx  RRawFileTests.cxx
io/rfio/: CMakeLists.txt
io/rfio/inc/: TRFIOFile.h
io/rootpcm/: ROOTBuild.txt
io/sql/: CMakeLists.txt  ROOTBuild.txt
io/sql/inc/: TSQLFile.h
io/sql/src/: TBufferSQL2.cxx  TSQLFile.cxx
io/xml/: CMakeLists.txt  ROOTBuild.txt
io/xml/inc/: TBufferXML.h  TXMLFile.h
io/xml/src/: TBufferXML.cxx
io/xmlparser/: CMakeLists.txt  ROOTBuild.txt
main/: CMakeLists.txt
math/: CMakeLists.txt  ROOTBuild.txt
math/fftw/: ROOTBuild.txt
math/foam/: CMakeLists.txt  ROOTBuild.txt
math/fumili/: CMakeLists.txt  ROOTBuild.txt
math/genetic/: ROOTBuild.txt
math/genvector/: CMakeLists.txt  ROOTBuild.txt
math/genvector/inc/Math/GenVector/: Cartesian3D.h
math/genvector/perf/: Cartesian3DBenchmarks.cxx
math/genvector/test/: CMakeLists.txt
math/mathcore/: ROOTBuild.txt
math/mathcore/inc/: TMath.h
math/mathcore/inc/Math/: Math_vectypes.hxx
math/mathcore/test/: CMakeLists.txt
math/mathmore/: ROOTBuild.txt
math/matrix/: ROOTBuild.txt
math/minuit/: ROOTBuild.txt
math/minuit2/: ROOTBuild.txt
math/minuit2/src/: Numerical2PGradientCalculator.cxx
math/mlp/: CMakeLists.txt  ROOTBuild.txt
math/physics/: ROOTBuild.txt
math/quadp/: CMakeLists.txt  ROOTBuild.txt
math/rtools/: ROOTBuild.txt
math/smatrix/: CMakeLists.txt  ROOTBuild.txt
math/splot/: CMakeLists.txt  ROOTBuild.txt
math/unuran/: ROOTBuild.txt
math/vecops/: ROOTBuild.txt
montecarlo/: CMakeLists.txt  ROOTBuild.txt
net/: CMakeLists.txt  ROOTBuild.txt
net/alien/: ROOTBuild.txt
net/alien/inc/: TAlienFile.h
net/auth/: CMakeLists.txt  ROOTBuild.txt
net/davix/: ROOTBuild.txt
net/davix/inc/: TDavixFile.h
net/http/: CMakeLists.txt  ROOTBuild.txt
net/http/civetweb/: civetweb.c
net/httpsniff/: ROOTBuild.txt
net/monalisa/: ROOTBuild.txt
net/net/: CMakeLists.txt  ROOTBuild.txt
net/net/inc/: TMessage.h  TNetFile.h  TParallelMergingFile.h  TSocket.h  TUDPSocket.h
net/net/src/: TMessage.cxx  TSocket.cxx  TUDPSocket.cxx
net/netx/: ROOTBuild.txt
net/netxng/: ROOTBuild.txt
net/rpdutils/: ROOTBuild.txt
proof/: CMakeLists.txt  ROOTBuild.txt
proof/proof/: CMakeLists.txt  ROOTBuild.txt
proof/proofbench/: CMakeLists.txt  ROOTBuild.txt
proof/proofd/: ROOTBuild.txt
proof/proofplayer/: CMakeLists.txt  ROOTBuild.txt
proof/proofx/: ROOTBuild.txt
roofit/: CMakeLists.txt  ROOTBuild.txt
roofit/histfactory/: ROOTBuild.txt
roofit/roofit/: ROOTBuild.txt
roofit/roofit/perf/: RooFitBinnedBenchmarks.cxx
roofit/roofitcore/: ROOTBuild.txt
roofit/roofitcore/src/: RooAbsCategory.cxx  RooAbsReal.cxx  RooAbsString.cxx
roofit/roostats/: ROOTBuild.txt
roofit/roostats/inc/RooStats/: DebuggingSampler.h  SamplingDistPlot.h
sql/: ROOTBuild.txt
test/: CMakeLists.txt  MainEvent.cxx  stress.cxx  stressGraphics.ref  stressLinear.cxx  testGenVectorVc.cxx  vmatrix.cxx  vvector.cxx
tmva/: CMakeLists.txt  ROOTBuild.txt
tmva/pymva/: ROOTBuild.txt
tmva/rmva/: ROOTBuild.txt
tmva/tmva/: CMakeLists.txt  ROOTBuild.txt
tmva/tmva/inc/TMVA/: MethodDNN.h
tmva/tmva/src/: MethodDL.cxx  MethodDNN.cxx
tmva/tmva/test/Method/: TestMethodDNNValidationSize.cxx
tmva/tmva/test/crossvalidation/: TestCrossValidationSerialise.cxx
tmva/tmvagui/: ROOTBuild.txt
tree/: CMakeLists.txt  ROOTBuild.txt
utils/: ROOTBuild.txt
(+183 files in other folders)
