add_root_subdirectory(mathcore ALL)
if(mathmore)
  add_root_subdirectory(mathmore ALL)
endif()
add_root_subdirectory(matrix ALL)
add_root_subdirectory(minuit ALL)
if(minuit2)
  add_root_subdirectory(minuit2 ALL)
endif()
add_root_subdirectory(fumili ALL)
add_root_subdirectory(physics ALL)
add_root_subdirectory(mlp ALL)
add_root_subdirectory(quadp ALL)
add_root_subdirectory(foam ALL)
add_root_subdirectory(smatrix ALL)
add_root_subdirectory(splot ALL)
#add_root_subdirectory(mathcore/test EXCLUDE_FROM_ALL)
add_root_subdirectory(genvector ALL)
if(tmva)
  add_root_subdirectory(genetic ALL)
endif()
if(unuran)
  add_root_subdirectory(unuran ALL)
endif()
if(fftw3)
  add_root_subdirectory(fftw ALL)
endif()

if(r)
  add_root_subdirectory(rtools ALL)
endif()

add_subdirectory(vecops)
