if(NOT basic)
   add_subdirectory(tmva)
   add_subdirectory(tmvagui)
endif(NOT basic)
if(python AND NUMPY_FOUND)
   add_subdirectory(pymva)
elseif(python AND NOT NUMPY_FOUND)
   message(STATUS "TMVA: Deactivate PyMVA because numpy is not found")
endif()
if(r)
   add_subdirectory(rmva)
endif()
#if(testing)
# add_subdirectory(test)
#endif()
